fix(View 3): fixes broken interactions, adjusts borders

--- a/src/containers/ViewThree/styles.scss
+++ b/src/containers/ViewThree/styles.scss
@@ -24,23 +24,29 @@
     overflow: hidden;
   }
 
+  .borderContainer {
+    position: absolute;
+
+    width: 100%;
+
+    border-left: 1px solid $DarkGray;
+    border-right: 1px solid $DarkGray;
+
+    pointer-events: none;
+  }
+
   .firstRow {
     height: 40vh;
     min-height: 400px;
+    position: relative;
 
     .borderContainer {
-      position: absolute;
-
-      width: calc(100% - 54px);
       height: 40vh;
       min-height: 400px;
 
-      border-left: 1px solid $DarkGray;
-      border-right: 1px solid $DarkGray;
       border-top: 1px solid $DarkGray;
 
       background: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 42px);
-
     }
 
     .features {
@@ -62,15 +68,11 @@
     height: 35vh;
     min-height: 200px;
     position: relative;
-    .borderContainer {
-      position: absolute;
 
-      width: calc(100% - 54px);
+    .borderContainer {
       height: 35vh;
       min-height: 200px;
 
-      border-left: 1px solid $DarkGray;
-      border-right: 1px solid $DarkGray;
       border-bottom: 1px solid $DarkGray;
     }
 
